--- a/frontend_v2/package.json
+++ b/frontend_v2/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy": "https://courier-devliery-web-app-tiim-m1fb7eomc-youtubesasukes-projects.vercel.app/?vercelToolbarCode=Z_vI6zu76cGqEww",
+  "proxy": "https://courier-devliery-web-app.onrender.com",
   "name": "frontend_v2",
   "version": "0.1.0",
   "private": true,
